@@ -1,0 +1,20 @@
+/**
+ * This package contains classes providing extension methods for JDK and Xtend classes to iterate over:
+ * <ul>
+ * 	<li>{@link de.fhg.fokus.xtensions.iteration.IterableExtensions IterableExtensions}</li>
+ * 	<li>{@link de.fhg.fokus.xtensions.iteration.IteratorExtensions IteratorExtensions}</li>
+ * 	<li>{@link de.fhg.fokus.xtensions.iteration.ArrayExtensions ArrayExtensions} </li>
+ * 	<li>{@link de.fhg.fokus.xtensions.iteration.PrimitiveIteratorExtensions PrimitiveIteratorExtensions}</li>
+ * 	<li>{@link de.fhg.fokus.xtensions.iteration.PrimitiveArrayExtensions PrimitiveArrayExtensions} </li>
+ * </ul>
+ * 
+ * Additionally this class introduces primitive type versions of the {@link java.lang.Iterable Iterable}
+ * interface (similar to how {@link java.util.PrimitiveIterator} is provided by the JDK as primitive versions of 
+ * {@link java.util.Iterator Iterator}):
+ * <ul>
+ * 	<li>{@link de.fhg.fokus.xtensions.iteration.IntIterable IntIterable}</li>
+ * 	<li>{@link de.fhg.fokus.xtensions.iteration.LongIterable LongIterable}</li>
+ * 	<li>{@link de.fhg.fokus.xtensions.iteration.DoubleIterable DoubleIterable}</li>
+ * </ul>
+ */
+package de.fhg.fokus.xtensions.iteration;
